# opencv_contrib

modules/: README.md
modules/cvv/src/qtutil/: util.cpp
modules/cvv/src/view/: linematchview.cpp  pointmatchview.cpp  translationsmatchview.cpp
modules/sfm/: CMakeLists.txt  README.md
modules/sfm/include/opencv2/: sfm.hpp
modules/sfm/include/opencv2/sfm/: sfm.hpp  sfm_api.hpp
modules/sfm/perf/: perf_main.cpp  perf_precomp.hpp
modules/sfm/samples/: logging.h  sfm.cpp
modules/sfm/src/: descriptors.cpp  matching.cpp  precomp.hpp  sfm_init.cpp  trackbuilder.cpp  tracks.cpp
modules/sfm/test/: test_precomp.hpp
modules/xfeatures2d/include/opencv2/: xfeatures2d.hpp
modules/xfeatures2d/include/opencv2/xfeatures2d/: nonfree.hpp
modules/xfeatures2d/perf/: perf_surf.cpp  perf_surf.ocl.cpp
modules/xfeatures2d/src/: brief.cpp  freak.cpp  sift.cpp  stardetector.cpp  surf.cpp  surf.hpp  xfeatures2d_create.cpp  xfeatures2d_init.cpp
